--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apollo-server-express": "^2.17.0",
     "dataloader": "^2.0.0",
     "graphql": "^15.3.0",
+    "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^6.1.0",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
